/*
 *  Copyright (c) 2016 Leo Khotov
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Lesser General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Lesser General Public License for more details.
 *
 *  You should have received a copy of the GNU Lesser General Public License
 *  version 3 along with this work.  If not, see <http://www.gnu.org/licenses/>.
 *
 */
syntax = "proto3";

package roosha.translation;

import "commons.proto";

option java_package = "com.github.roosha.proto.translation";
option java_outer_classname = "TranslationServiceProto";

option cc_enable_arenas = false;

option optimize_for = SPEED;


service RooshaTranslationService {
  	rpc register(roosha.commons.Credentials) returns (roosha.commons.AuthenticationToken) {}
	rpc authorize(roosha.commons.Credentials) returns (roosha.commons.AuthenticationToken) {}

	// All methods below are required to pass authorization token in 'roosha-auth-token' metadata key.
    rpc translate(TranslationRequest) returns (Translations) {}
    rpc proposeUserTranslations(UserTranslationsProposal) returns (roosha.commons.Void) {}
}

message TranslationRequest {
	// NOTE: 'token' should be passed always. 'id' is added only for convenience inside server side.
	oneof tokenOrId {
		bytes token = 1;
		uint64 id = 100;
	}
    // Text to be translated
    string source = 2;
}

message UserTranslationsProposal {
	// NOTE: 'token' should be passed always. 'id' is added only for convenience inside server side.
	oneof tokenOrId {
		bytes token = 1;
		uint64 id = 100;
	}
	// Translations, proposed by user.
	Translations proposedTranslations = 2;
}

message Translations {
    string source = 1;
    repeated Translation translation = 2;
}

message Translation {
    repeated string target = 1;
    repeated string example = 2;
    TranslationProvider provider = 3;
}

enum TranslationProvider {
    UNKNOWN = 0;
    YANDEX_DICTIONARY = 1;
    YANDEX_TRANSLATOR = 2;
}
